@@ -31,7 +31,7 @@ public class EventoAuditoriaController {
 
     private Pageable buildPageable(int page, int size) {
         int safePage = Math.max(page, 0);
-        int safeSize = Math.min(Math.max(size, 1), 100);
+      int safeSize = Math.clamp(size, 1, 100);
         return PageRequest.of(safePage, safeSize, Sort.by(Sort.Direction.DESC, "fecha"));
     }
 
